# learn_cpp

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: qodana_code_quality.yml
cpp20/: m_airline_ticket.h
data_type/: types.cpp
demo_employee/: database.cpp  database.h  employee.cpp  employee.h  main.cpp
demo_module/: hello.ixx  my_str.ixx
demo_simple_class/: m_airline_ticket.cpp  shorthand.cpp
malloc_free/: main.cpp
module_demo/: hello.ixx  main.cpp
start/: io.cpp  io.h  start.cpp
